--- a/marketplace_builder/views/layouts/1col.liquid
+++ b/marketplace_builder/views/layouts/1col.liquid
@@ -9,6 +9,7 @@
 		{%- include 'partials/layout/header' -%}
 	</header>
 	<main>
+		<h1>{{pagetitle}}</h1>
 		{{content_for_layout}}
 	</main>
 	<footer>
