--- a/marketplace_builder/views/pages/home.liquid
+++ b/marketplace_builder/views/pages/home.liquid
@@ -6,5 +6,4 @@ name: Home
 metadata:
   title: Home Page
 ---
-{%- content_for 'pagetitle' -%}{{page.metadata.title}}{%- endcontent_for -%}
-<h1>{{page.metadata.title}}</h1>
+<p>Your home page content.</p>
